# backend-interview-assignments

./: .gitignore  Dockerfile  Makefile  README.md  pyproject.toml
.github/workflows/: doctor.yml
backend/python/: .env.example  README.md  pyproject.toml  requirements.txt
backend/python/src/api/: main.py  routes.py  schemas.py
backend/python/src/application/: product_service.py
backend/python/src/domain/model/: product.py
backend/python/tests/unit/application/: test_product_service.py
backend/python/tests/unit/domain/: test_product.py
backend/typescript/: Dockerfile  README.md  biome.json  package.json  tsconfig.json
backend/typescript/src/api/: app.ts  routes.ts  schemas.ts
backend/typescript/src/application/: product-service.ts
backend/typescript/src/domain/model/: product.ts
backend/typescript/src/domain/repository/: product-repository.ts
backend/typescript/src/infrastructure/repository/: memory-product-repository.ts
backend/typescript/tests/unit/application/: product-service.test.ts
backend/typescript/tests/unit/domain/: product.test.ts
frontend/: README.md
frontend/src/: App.css  App.jsx  index.css
frontend/src/components/: CreateProductForm.css  CreateProductForm.jsx  ProductList.css  ProductList.jsx
frontend/src/services/: api.js
src/api/: __init__.py  main.py  routes.py  schemas.py
src/domain/model/: product.py
src/domain/repository/: product_repository.py
src/infrastructure/repository/: memory_product_repository.py
tests/unit/domain/: test_product.py
